--- a/src/client/scss/styles.scss
+++ b/src/client/scss/styles.scss
@@ -4,8 +4,10 @@
 
 // Components
 @import "./components/header.scss";
+@import "./components/footer.scss";
 
 // Screens
+@import "./screens/home.scss";
 
 // Defaults
 body {
@@ -17,4 +19,11 @@ body {
     color: inherit;
     text-decoration: none;
   }
+}
+
+main {
+  max-width: 960px;
+  width: 100%;
+  margin: 0 auto;
+  margin-top: 50px;
 }
