--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -19,4 +19,4 @@ block content
             +video(potato)
             +video(potato)
         else
-            li Sorry nothing found.
+            span.empty__message No videos found
