--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -2,21 +2,8 @@ extends base
 include mixins/video 
 
 block content 
-    div.video__grid
+    div.video-grid
         each potato in videos
-            +video(potato)
-            +video(potato)
-            +video(potato)
-            +video(potato)
-            +video(potato)
-            +video(potato)
-            +video(potato)
-            +video(potato)
-            +video(potato)
-            +video(potato)
-            +video(potato)
-            +video(potato)
-            +video(potato)
             +video(potato)
         else
             span.empty__message No videos found
