--- a/src/client/scss/screens/search.scss
+++ b/src/client/scss/screens/search.scss
@@ -7,8 +7,8 @@
     all: unset;
     padding: 15px 20px;
     border-radius: 5px;
-    border: 1px solid rgba(255, 255, 255, 0.1);
-    background-color: #292928;
+    border: 1px solid rgba(255, 255, 255, 0.2);
+    background-color: black;
     margin-bottom: 5px;
     font-size: 16px;
     color: white;
@@ -18,7 +18,7 @@
     all: unset;
     position: absolute;
     right: 15px;
-    background-color: #292928;
+    background-color: rgba(0, 0, 0, 0);
     text-align: center;
     font-size: 18px;
     cursor: pointer;
