--- a/src/client/scss/styles.scss
+++ b/src/client/scss/styles.scss
@@ -13,6 +13,8 @@
 // Screens
 @import "./screens/home.scss";
 @import "./screens/search.scss";
+@import "./screens/profile.scss";
+@import "./screens/edit-profile.scss";
 
 // Defaults
 body {
@@ -27,7 +29,7 @@ body {
 }
 
 main {
-  max-width: 960px;
+  max-width: 1200px;
   width: 100%;
   margin: 0 auto;
   margin-top: 50px;
