--- a/src/views/users/profile.pug
+++ b/src/views/users/profile.pug
@@ -1,10 +1,12 @@
 extends ../base
 include ../mixins/video
 
-//- userController.js 파일의 see 컨트롤러가 보낸 videos array를
-//- home.pug 파일처럼 보여준다!
 block content 
-    each potato in videos
-        +video(potato)
-    else
-        li Sorry nothing found.
+    div.profile__data 
+        img(src="/" + user.avatarUrl).avatar
+        h3=user.name
+    div.video-grid
+        each potato in user.videos
+            +video(potato)
+        else
+            span.empty__message No videos found
