--- a/src/views/watch.pug
+++ b/src/views/watch.pug
@@ -3,7 +3,7 @@ extends base
 block content
     div#videoContainer
         video(src="/" + video.fileUrl)
-        div 
+        div#videoControls
             button#play 플레이
             button#mute 음소거
             input(type="range",step="0.1", value=0.5, min="0", max="1")#volume
