--- a/src/views/upload.pug
+++ b/src/views/upload.pug
@@ -1,6 +1,9 @@
 extends base
 
 block content 
+    div 
+        video#preview
+        button#startBtn Start Recording
     if errorMessage
         span=errorMessage 
         //- 에러 메세지는 template variable 형태로 보내고 있어. -//
@@ -11,3 +14,6 @@ block content
         input(placeholder="Description", required, type="text", name="description", minlength="20" )
         input(placeholder="Hashtags, separated by comma.", required, type="text", name="hashtags")
         input(type="submit", value="Upload Video")
+
+    block scripts 
+        script(src="/static/js/recorder.js")
