--- a/src/views/upload.pug
+++ b/src/views/upload.pug
@@ -3,17 +3,18 @@ extends base
 block content 
     div 
         video#preview
-        button#startBtn Start Recording
+        button#actionBtn 녹화 시작!
     if errorMessage
         span=errorMessage 
-        //- 에러 메세지는 template variable 형태로 보내고 있어. -//
     form(method="POST", enctype="multipart/form-data") 
-        label(for="video") Video File 
+        label(for="video") 비디오 파일 
         input(type="file", accept="video/*", required, id="video" name="video")
-        input(placeholder="Title", require d, type="text", name="title", maxlength="80")
-        input(placeholder="Description", required, type="text", name="description", minlength="20" )
-        input(placeholder="Hashtags, separated by comma.", required, type="text", name="hashtags")
-        input(type="submit", value="Upload Video")
+        label(for="thumb") 썸네일 파일
+        input(type="file", accept="image/*", required, id="thumb", name="thumb")
+        input(placeholder="제목", require d, type="text", name="title", maxlength="80")
+        input(placeholder="비디오 설명", required, type="text", name="description", minlength="20" )
+        input(placeholder="해시태그 (쉼표로 구분됩니다)", required, type="text", name="hashtags")
+        input(type="submit", value="비디오 업로드!")
 
     block scripts 
         script(src="/static/js/recorder.js")
