--- a/src/views/upload.pug
+++ b/src/views/upload.pug
@@ -1,20 +1,21 @@
 extends base
 
 block content 
-    div 
-        video#preview
-        button#actionBtn 녹화 시작!
-    if errorMessage
-        span=errorMessage 
-    form(method="POST", enctype="multipart/form-data") 
-        label(for="video") 비디오 파일 
-        input(type="file", accept="video/*", required, id="video" name="video")
-        label(for="thumb") 썸네일 파일
-        input(type="file", accept="image/*", required, id="thumb", name="thumb")
-        input(placeholder="제목", require d, type="text", name="title", maxlength="80")
-        input(placeholder="비디오 설명", required, type="text", name="description", minlength="20" )
-        input(placeholder="해시태그 (쉼표로 구분됩니다)", required, type="text", name="hashtags")
-        input(type="submit", value="비디오 업로드!")
+    div.upload__container
+        div.upload__video
+            video#preview
+            button#actionBtn.social__btn 녹화 시작!
+        if errorMessage
+            span=errorMessage 
+        form(method="POST", enctype="multipart/form-data") 
+            label(for="video") 비디오 파일 
+            input(type="file", accept="video/*", required, id="video" name="video")
+            label(for="thumb") 썸네일 파일
+            input(type="file", accept="image/*", required, id="thumb", name="thumb")
+            input(placeholder="제목", require d, type="text", name="title", maxlength="80")
+            input(placeholder="비디오 설명", required, type="text", name="description", minlength="20" )
+            input(placeholder="해시태그 (쉼표로 구분됩니다)", required, type="text", name="hashtags")
+            input(type="submit", value="비디오 업로드!")
 
     block scripts 
         script(src="/static/js/recorder.js")
