--- a/src/client/scss/styles.scss
+++ b/src/client/scss/styles.scss
@@ -17,6 +17,7 @@
 @import "./screens/profile.scss";
 @import "./screens/edit-profile.scss";
 @import "./screens/upload.scss";
+@import "./screens/watch.scss";
 
 // Defaults
 body {
