--- a/src/views/watch.pug
+++ b/src/views/watch.pug
@@ -28,10 +28,17 @@ block content
             br
             a(href=`${video.id}/delete`) Delete Video &rarr;
     if loggedIn
-        div.video__comments
+        div.video__add-comments
             form.video__comment-form#commentForm
                 textarea(cols="30", rows="10", placeholder="댓글을 남겨주세요!")
                 button 댓글
+
+    div.video__comments
+        ul
+            each comment in video.comments.reverse()
+                li.video__comment
+                    i.fas.fa-comment
+                    |  #{comment.text}
 
 
 block scripts 
