--- a/src/views/watch.pug
+++ b/src/views/watch.pug
@@ -1,7 +1,7 @@
 extends base
 
 block content
-    div#videoContainer
+    div#videoContainer(data-id=video._id)
         video(src="/" + video.fileUrl)
         div#videoControls.videoControls
             div.videoControls__play
@@ -38,10 +38,11 @@ block content
             each comment in video.comments.reverse()
                 li.video__comment
                     i.fas.fa-comment
-                    |  #{comment.text}
+                    span  #{comment.text}
 
 
 block scripts 
+    script(src="/static/js/main.js")
     script(src="/static/js/videoPlayer.js")
     if loggedIn
         script(src="/static/js/commentSection.js")
