--- a/src/views/join.pug
+++ b/src/views/join.pug
@@ -11,7 +11,7 @@ block content
         input(placeholder="Username", name="username", type="text", required)
         input(placeholder="Password", name="password", type="password", required)
         input(placeholder="Confirm Password", name="password2", type="password", required)
-        input(placeholder="Location", name="location", type="text", required)
+        input(placeholder="Location", name="location", type="text")
         input(type="submit", value="Join")
         include partials/social-login
     div.auth-switch
