--- a/src/views/watch.pug
+++ b/src/views/watch.pug
@@ -27,21 +27,22 @@ block content
             a(href=`${video.id}/edit`) Edit Video &rarr;
             br
             a(href=`${video.id}/delete`) Delete Video &rarr;
+
     if loggedIn
-        div.video__add-comments
+        div.video__comments
             form.video__comment-form#commentForm
                 textarea(cols="30", rows="10", placeholder="댓글을 남겨주세요!")
                 button 댓글
 
-    div.video__comments
-        ul
-            each comment in video.comments.reverse()
-                li.video__comment
-                    i.fas.fa-comment
-                    span  #{comment.text}
+    //- div.video__comments
+    //-     ul
+    //-         each comment in video.comments.reverse()
+    //-             li.video__comment
+    //-                 i.fas.fa-comment
+    //-                 span  #{comment.text}
 
 
 block scripts 
     script(src="/static/js/videoPlayer.js")
     if loggedIn
-        script(src="/static/js/commentSection.js")
+        script(src="/static/js/commentSection.js") 
