--- a/src/views/watch.pug
+++ b/src/views/watch.pug
@@ -37,10 +37,11 @@ block content
     div.video__comments
         ul 
             each comment in video.comments.reverse()
-                li.video__comment
+                li.video__comment(data-id=comment.id)
                     i.fas.fa-comment
                     span  #{comment.text}
-                    span ❌
+                    if (String(video.owner._id) === String(loggedInUser._id)) || (String(comment.owner._id) === String(loggedInUser._id))
+                        span.delete-btn  ❌
 
 block scripts 
     script(src="/static/js/videoPlayer.js")
