--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -6,4 +6,4 @@ block content
         each potato in videos
             +video(potato)
         else
-            span.empty__message No videos found
+            span.empty__message 비디오가 없어요 🥲
