--- a/src/views/edit-profile.pug
+++ b/src/views/edit-profile.pug
@@ -4,13 +4,11 @@ block content
     if errorMessage 
         span=errorMessage
     form(method="POST", enctype="multipart/form-data").edit-profile__form
-        label(for="avatar") Avatar 
+        label(for="avatar") 프로필 사진 
         input(type="file", id="avatar", name="avatar", accept="image/*")
-        input(placeholder="Name", name="name", type="text", required, value=loggedInUser.name)
-        input(placeholder="Email", name="email", type="email", required, value=loggedInUser.email)
-        input(placeholder="Username", name="username", type="text", required, value=loggedInUser.username)
-        input(placeholder="Location", name="location", type="text", value=loggedInUser.location)
-        input(type="submit", value="Update Profile")
+        input(placeholder="이메일", name="email", type="email", required, value=loggedInUser.email)
+        input(placeholder="이름", name="username", type="text", required, value=loggedInUser.username)
+        input(type="submit", value="프로필 수정")
         if !loggedInUser.socialOnly
             div.edit-profile__password
-                a(href="change-password") Change Password &rarr;
+                a(href="change-password") 비밀번호 변경 &rarr;
