--- a/src/views/join.pug
+++ b/src/views/join.pug
@@ -5,16 +5,13 @@ block content
     if errorMessage 
         span=errorMessage
     form(method="POST")
-        //- 신규 유저
-        input(placeholder="Name", name="name", type="text", required)
-        input(placeholder="Email", name="email", type="email", required)
-        input(placeholder="Username", name="username", type="text", required)
-        input(placeholder="Password", name="password", type="password", required)
-        input(placeholder="Confirm Password", name="password2", type="password", required)
-        input(placeholder="Location", name="location", type="text")
-        input(type="submit", value="Join")
+        input(placeholder="이름", name="username", type="text", required)
+        input(placeholder="이메일", name="email", type="email", required)
+        input(placeholder="비밀번호", name="password", type="password", required)
+        input(placeholder="비밀번호 확인", name="password2", type="password", required)
+        input(type="submit", value="회원가입")
         include partials/social-login
     div.auth-switch
-        span Already have an account? 
-        a(href="/login") Log in now &rarr;
+        span 이미 계정이 있나요? 
+        a(href="/login") 로그인 &rarr;
     
