--- a/src/views/partials/social-login.pug
+++ b/src/views/partials/social-login.pug
@@ -1,4 +1,4 @@
 div.social-login
     a(href="/users/github/start").social__btn.social__btn--github 
         i.fab.fa-github
-        | Continue with Github &rarr;
+        |  Github으로 로그인하기 &rarr;
