--- a/src/views/watch.pug
+++ b/src/views/watch.pug
@@ -21,18 +21,18 @@ block content
     div.video__data
         p.video__title=video.title
         small.video__owner Uploaded by 
-            a(href=`/users/${video.owner._id}`)=video.owner.name
+            a(href=`/users/${video.owner._id}`)=video.owner.username
         small.video__createdAt=new Date(video.createdAt).toLocaleDateString("ko-kr", {weekday: 'long', year: 'numeric', month: 'long', day: 'numeric'})
         if String(video.owner._id) === String(loggedInUser._id) 
-            a(href=`${video.id}/edit`) Edit Video &rarr;
+            a(href=`${video.id}/edit`) 비디오 수정 &rarr;
             br
-            a(href=`${video.id}/delete`) Delete Video &rarr;
+            a(href=`${video.id}/delete`) 비디오 삭제 &rarr;
 
     if loggedIn
         div.video__comments
             form.video__comment-form#commentForm
                 textarea(cols="30", rows="10", placeholder="댓글을 남겨주세요!")
-                button 댓글
+                button 댓글 추가
 
     div.video__comments
         ul 
