--- a/src/client/scss/screens/watch.scss
+++ b/src/client/scss/screens/watch.scss
@@ -3,35 +3,31 @@
   display: flex;
   flex-direction: column;
   .video__title {
-    font-size: 26px;
-    margin-bottom: 5px;
-  }
-  .video__createdAt {
-    font-size: 12px;
+    font-size: 24px;
+    margin-bottom: 15px;
   }
   .video__owner {
+    display: flex;
+    align-items: center;
     margin-bottom: 5px;
     font-size: 14px;
-    a {
-      color: cornflowerblue;
-      text-decoration: underline;
+    .video__owner-avatar {
+      width: 45px;
+      height: 45px;
+      border-radius: 50%;
+      margin-right: 10px;
     }
-  }
-}
-
-// 댓글 css
-.video__comments {
-  display: flex;
-  flex-direction: column;
-  max-width: 320px;
-  width: 100%;
-  margin: 0 auto;
-  margin-top: 20px;
-  .video__comment {
-    padding: 10px;
-    border-radius: 9999px;
-    background-color: white;
-    color: black;
-    margin-bottom: 10px;
+    .video__data-sub {
+      display: flex;
+      flex-direction: column;
+      a {
+        color: inherit;
+        font-size: 24px;
+        margin-bottom: 5px;
+      }
+      .video__createdAt {
+        font-size: 12px;
+      }
+    }
   }
 }
