--- a/src/views/user/login.pug
+++ b/src/views/user/login.pug
@@ -1,5 +1,4 @@
-//- 최초 로그인 페이지
-extends base
+extends ../base
 
 block content 
     if errorMessage 
@@ -8,7 +7,7 @@ block content
         input(placeholder="이름", name="username", type="text", required)
         input(placeholder="비밀번호", name="password", type="password", required)
         input(type="submit", value="로그인")
-        include partials/social-login
+        include ../partials/social-login
     div.auth-switch
         span 아직 계정이 없나요? 
         a(href="/join") 회원가입 &rarr;
