--- a/src/views/video/edit.pug
+++ b/src/views/video/edit.pug
@@ -1,10 +1,7 @@
-extends base.pug
-
-//- block head
-//-     title Edit | Wetube
+extends ../base
 
 block content
-    h4 Update Video
+    h4 비디오 업데이트
     form(method="POST") 
         input(name="title", placeholder="Video Title", value=video.title, required)
         input(placeholder="Description", required, type="text", name="description", minlength="20", value=video.description )
