--- a/src/client/scss/styles.scss
+++ b/src/client/scss/styles.scss
@@ -11,6 +11,7 @@
 @import "./components/social-login.scss";
 @import "./components/video-player.scss";
 @import "./components/comments.scss";
+@import "./components/video-data.scss";
 
 // Screens
 @import "./screens/home.scss";
