--- a/src/views/partials/header.pug
+++ b/src/views/partials/header.pug
@@ -15,7 +15,7 @@ header
                     a(href="/users/logout") Log Out 
                 li
                     a(href=`/users/${loggedInUser._id}`)
-                        img.header__avatar(src=loggedInUser.avatarUrl)
+                        img.header__avatar(src="/" + loggedInUser.avatarUrl)
             else                       
                 li 
                     a(href="/login") Login
