--- a/src/client/scss/components/header.scss
+++ b/src/client/scss/components/header.scss
@@ -6,6 +6,7 @@ header {
   .header-logo {
     color: $red;
     font-size: 38px;
+    font-family: "Pacifico", cursive;
   }
   ul {
     display: flex;
