--- a/src/views/partials/header.pug
+++ b/src/views/partials/header.pug
@@ -1,6 +1,5 @@
 header
-    a(href="/").header-logo
-        i.fab.fa-youtube
+    a(href="/").header-logo Anitube
     nav
         ul
             li
