--- a/src/client/scss/screens/upload.scss
+++ b/src/client/scss/screens/upload.scss
@@ -8,6 +8,16 @@
     video {
       max-width: 100%;
       margin-bottom: 10px;
+      border-radius: 5px;
+    }
+    .record__btn {
+      max-width: 100%;
+      font-size: 16px;
+      background-color: #8294c4;
+      opacity: 0.9;
+      color: white;
+      padding: 15px 65px;
+      border-radius: 10px;
     }
   }
 }
