--- a/src/client/scss/styles.scss
+++ b/src/client/scss/styles.scss
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Pacifico&display=swap");
+
 // Config
 @import "./config/_variables.scss";
 @import "./config/_reset.scss";
@@ -26,7 +28,7 @@ body {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   background-color: $bg;
-  color: white;
+  color: black;
   a {
     color: inherit;
     text-decoration: none;
