--- a/src/views/user/join.pug
+++ b/src/views/user/join.pug
@@ -4,7 +4,7 @@ block content
     if errorMessage 
         span=errorMessage
     form(method="POST")
-        input(placeholder="이름", name="username", type="text", required)
+        input(placeholder="아이디", name="username", type="text", required)
         input(placeholder="이메일", name="email", type="email", required)
         input(placeholder="비밀번호", name="password", type="password", required)
         input(placeholder="비밀번호 확인", name="password2", type="password", required)
