--- a/src/views/user/login.pug
+++ b/src/views/user/login.pug
@@ -4,7 +4,7 @@ block content
     if errorMessage 
         span=errorMessage
     form(method="POST")
-        input(placeholder="이름", name="username", type="text", required)
+        input(placeholder="아이디", name="username", type="text", required)
         input(placeholder="비밀번호", name="password", type="password", required)
         input(type="submit", value="로그인")
         include ../partials/social-login
