--- a/src/views/video/edit.pug
+++ b/src/views/video/edit.pug
@@ -1,9 +1,11 @@
 extends ../base
 
 block content
-    h4 비디오 업데이트
-    form(method="POST") 
-        input(name="title", placeholder="Video Title", value=video.title, required)
-        input(placeholder="Description", required, type="text", name="description", minlength="20", value=video.description )
-        input(placeholder="Hashtags, separated by comma.", required, type="text", name="hashtags", value=video.hashtags.join())
+    form(method="POST")
+        label(for="title") 제목  
+            input(name="title", placeholder="Video Title", value=video.title, required)
+        label(for="hashtags") 해시태그 
+            input(name="hashtags", placeholder="Hashtags, separated by comma.", required, type="text", value=video.hashtags.join())
+        label(for="description") 설명     
+            input(name="description", placeholder="Description", required, type="text", minlength="20", value=video.description )
         input(value="Save", type="submit")
