--- a/src/views/video/upload.pug
+++ b/src/views/video/upload.pug
@@ -4,18 +4,19 @@ block content
     div.upload__container
         div.upload__video
             video#preview
-            button#actionBtn.social__btn 녹화 시작!
+            button#actionBtn.social__btn 녹화 시작
         if errorMessage
             span=errorMessage 
-        form(method="POST", enctype="multipart/form-data") 
-            label(for="video") 비디오 파일 
-            input(type="file", accept="video/*", required, id="video" name="video")
-            label(for="thumb") 썸네일 파일
-            input(type="file", accept="image/*", required, id="thumb", name="thumb")
+        form(method="POST", enctype="multipart/form-data")
+            div.file-upload__form
+                label(for="video").fas.fa-folder-plus.file-upload__btn  파일 선택
+                input(type="file", accept="video/*", required, id="video" name="video")
+                label(for="thumb").fas.fa-image.file-upload__btn  썸네일 선택
+                input(type="file", accept="image/*", required, id="thumb", name="thumb")
             input(placeholder="제목", require d, type="text", name="title", maxlength="80")
-            input(placeholder="비디오 설명", required, type="text", name="description", minlength="10" )
+            textarea(placeholder="설명", required, type="text", name="description", minlength="10" )
             input(placeholder="해시태그 (쉼표로 구분됩니다)", required, type="text", name="hashtags")
-            input(type="submit", value="비디오 업로드!")
+            input(type="submit", value="동영상 업로드")
 
     block scripts 
         script(src="/static/js/recorder.js")
