--- a/src/views/video/watch.pug
+++ b/src/views/video/watch.pug
@@ -21,3 +21,6 @@ block content
     
     include ../partials/video-data
     include ../partials/comment
+
+block scripts 
+    script(src="/static/js/commentSection.js") 
