--- a/src/views/video/watch.pug
+++ b/src/views/video/watch.pug
@@ -23,4 +23,5 @@ block content
     include ../partials/comment
 
 block scripts 
-    script(src="/static/js/commentSection.js") 
+    script(src="/static/js/commentSection.js")
+    script(src="/static/js/videoPlayer.js") 
