--- a/src/client/scss/components/comments.scss
+++ b/src/client/scss/components/comments.scss
@@ -4,27 +4,99 @@
   width: 100%;
   margin: 0 auto;
   margin-top: 20px;
-  .video__comment {
+  .video__comments-count {
+    margin: 20px 0;
+  }
+
+  .video__comment-form {
     display: flex;
     align-items: center;
-    padding: 10px;
-    border-radius: 9999px;
-    margin-bottom: 10px;
-    .video__comment-avatar {
-      width: 35px;
-      height: 35px;
-      border-radius: 50%;
-      margin-right: 5px;
-    }
-    .video__comment-col {
-      display: flex;
-      flex-direction: column;
-      .video__comment-user {
-        margin-right: 8px;
+    margin-bottom: 20px;
+    font-size: 15px;
+    input {
+      background-color: transparent;
+      border: none;
+      border-bottom: 1.4px solid $mid;
+      border-radius: 0px !important;
+      width: 40%;
+      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+        Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
+        sans-serif;
+      &::placeholder {
+        color: rgba(0, 0, 0, 0.6);
         font-size: 15px;
       }
-      .video__comment-text {
+      &:focus {
+        border-bottom: 1.4px solid $dark;
+        &::placeholder {
+          opacity: 0;
+        }
+      }
+    }
+    button {
+      margin-left: 20px;
+      border: none;
+      background-color: $dark;
+      padding: 10px;
+      border-radius: 12px;
+      color: white;
+      &:hover {
+        cursor: pointer;
+      }
+    }
+  }
+
+  .logggedInUser-avatar,
+  .video__comment-avatar {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    margin-right: 15px;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+  }
+
+  .video__comments-list {
+    padding: 0 20px;
+    .video__comment {
+      display: flex;
+      align-items: center;
+      padding: 10px;
+      border-radius: 9999px;
+      margin-bottom: 10px;
+      .video__comment-col {
+        display: flex;
+        flex-direction: column;
+        .video__comment-user {
+          margin-right: 8px;
+          font-size: 16px;
+          font-family: $font;
+        }
+        .video__comment-message {
+          display: flex;
+          align-items: flex-end;
+          .video__comment-text {
+            margin-top: 5px;
+            font-family: $font;
+            background-color: $light;
+            border-radius: 15px;
+            border-top-left-radius: 0px;
+            padding: 13px;
+            margin-left: 5px;
+            font-size: 16px;
+          }
+          .video__comment-createdAt {
+            margin-left: 5px;
+            font-size: 8px;
+            opacity: 0.7;
+          }
+        }
+      }
+      .delete-btn {
         font-size: 15px;
+        margin-left: 20px;
+        &:hover {
+          cursor: pointer;
+        }
       }
     }
   }
