--- a/src/client/scss/components/forms.scss
+++ b/src/client/scss/components/forms.scss
@@ -1,11 +1,13 @@
 form {
-  max-width: 420px;
-  margin: 0 auto;
-  &:not(.search__form, .video__comment-form) {
-    padding: 30px;
-    background-color: rgba($color: $bg, $alpha: 0.7);
-    border-radius: 10px;
-    border: 1px solid rgba($color: #fff, $alpha: 0.1);
+  &:not(.video__comment-form) {
+    max-width: 420px;
+    margin: 0 auto;
+    &:not(.search__form) {
+      padding: 30px;
+      background-color: rgba($color: $bg, $alpha: 0.7);
+      border-radius: 10px;
+      border: 1px solid rgba($color: #fff, $alpha: 0.1);
+    }
   }
 }
 
