--- a/src/client/scss/components/video-data.scss
+++ b/src/client/scss/components/video-data.scss
@@ -5,8 +5,10 @@
   margin-top: 10px;
   margin-bottom: 5px;
   .video__title {
-    font-size: 24px;
+    font-size: 30px;
     font-weight: bold;
+    font-family: "Poor Story", cursive;
+    font-weight: bolder;
   }
   .video__icons {
     display: flex;
@@ -39,13 +41,15 @@
     align-items: center;
     justify-content: center;
     .video__owner-avatar {
-      width: 40px;
-      height: 40px;
+      width: 45px;
+      height: 45px;
       border-radius: 50%;
-      margin-right: 10px;
+      margin-right: 20px;
+      box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
     }
     .video__owner-username {
-      font-size: 20px;
+      font-size: 25px;
+      font-family: "Poor Story", cursive;
     }
   }
   .video__owner-setting {
@@ -82,9 +86,11 @@
       color: black;
       background-color: #acb1d6;
       border-radius: 20px;
+      font-family: $font;
     }
   }
   .video__description {
     font-size: 16px;
+    font-family: "Poor Story", cursive;
   }
 }
