--- a/src/client/scss/styles.scss
+++ b/src/client/scss/styles.scss
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Pacifico&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poor+Story&display=swap");
 
 // Config
 @import "./config/_variables.scss";
