--- a/src/client/scss/screens/edit-profile.scss
+++ b/src/client/scss/screens/edit-profile.scss
@@ -4,6 +4,13 @@ form {
     margin-bottom: 10px;
     display: block;
   }
+  #avatar {
+    display: none;
+  }
+  .profile__avatar {
+    width: 65px;
+    height: 65px;
+  }
 }
 
 .edit-profile__password {
