--- a/src/client/scss/components/header.scss
+++ b/src/client/scss/components/header.scss
@@ -23,7 +23,7 @@ header {
     }
   }
   .header__btn {
-    background-color: white;
+    background-color: $dark;
     color: $bg;
     padding: 5px 10px;
     border-radius: 5px;
@@ -32,5 +32,6 @@ header {
     width: 40px;
     height: 40px;
     border-radius: 50%;
+    box-shadow: rgba(1, 1, 1, 0.16) 0px 1px 4px;
   }
 }
