--- a/src/client/scss/components/video-player.scss
+++ b/src/client/scss/components/video-player.scss
@@ -1,8 +1,10 @@
 #videoContainer {
   width: 100%;
   position: relative;
+  color: white;
   video {
     width: 100%;
+    border-radius: 5px;
   }
   .videoControls {
     opacity: 0;
